- fix wrong sender object (technical fault not a functional issue) - remove already implemented TODO - Added new torch mechanics

--- a/ExtremeFirestarters/assets/extremefirestartersreforged/lang/en.json
+++ b/ExtremeFirestarters/assets/extremefirestartersreforged/lang/en.json
@@ -28,6 +28,8 @@
 
   "toohungry": "You are too hungry to do this.",
 
+  "holding-active-torch": "Holding an active torch, cannot switch slot.",
+
   //Death messages (BetterDeathMessages)
   "firestarting-critical-failure-1": "Player {0} died trying to light a fire.",
   "firestarting-critical-failure-2": "Player {0} lit themselves instead of the campfire.",
